@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-22T00:40:13Z",
+  "timestamp" : "2022-04-22T08:10:21Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
+  "count_prev_day_dec" : 17,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 0,
