@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-22T00:40:13Z",
+  "timestamp" : "2022-04-22T08:10:21Z",
   "count_outdated" : 931,
   "uniques_outdated" : 53,
-  "count" : 1042,
+  "count" : 1025,
   "uniques" : 65,
   "views" : [
     {
       "timestamp": "2022-04-08T00:00:00Z",
-      "count": 27,
+      "count": 10,
       "count_minmax": [ 0, 27 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
