@@ -1,10 +1,10 @@
 {
-  "count": 111,
+  "count": 94,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-04-08T00:00:00Z",
-      "count": 27,
+      "count": 10,
       "uniques": 1
     },
     {
