@@ -1,3 +1,9 @@
+2022-04-22T08:10:21Z:
+* notice: last 14d: all unq: 94 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 931 53 / 1042 65
+* notice: next accum: outdated-all outdated-unq / all unq: 931 53 / 1025 65
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -17 // +0 +1 / -0 -17
+
 2022-04-22T00:40:13Z:
 * notice: last 14d: all unq: 111 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 931 53 / 1041 65
